--- a/EXERCICIOS/ex03.html
+++ b/EXERCICIOS/ex03.html
@@ -33,7 +33,7 @@
     <li><a href="Paginas extras/pag03.html" target="frame">Terceira Pagina</a></li>
 </ul>
 
-<iframe src="" id="tela" name="frame">
+<iframe srcdoc=" <h1> Selecione Uma das Paginas acima</h1>  " id="tela" name="frame">
     <p>Infelizmente seu navegador não é compativel com iso.</p>
 </iframe>
 
